--- a/public/views/taskList.html
+++ b/public/views/taskList.html
@@ -144,7 +144,7 @@ Purchase: http://wrapbootstrap.com
                         <div class="widget-body">
                             <div class="form-group">
                                 <label for="xlginput">添加评语</label>
-                                <input type="text" class="form-control input-xl" id="xlginput" placeholder="">
+                                <textarea  rows="5" cols="7" style="resize:none;" type="text"  style="overflow-x:hidden;" class="form-control input-xl" id="xlginput" placeholder=""></textarea>
                                 <br/>
                                 <div class="col-md-offset-5 col-md-6">
                                     <a href="javascript:;" id="rate" class="btn btn-primary btn-lg" data-mode=""><i class="fa fa-check"></i> 保存 </a>
