活动 评论页面 细节修改

--- a/public/views/activity.html
+++ b/public/views/activity.html
@@ -1,45 +1,23 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Rest Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-<script type="applijewelleryion/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!--<link href="../editor/activity/css/bootstrap.css" rel='stylesheet' type='text/css' />-->
-<!-- Custom Theme files -->
-<!--<link href="../editor/activity/css/style.css" rel='stylesheet' type='text/css' />-->
-	<script src="../lib/jquery/jquery.min.js"></script>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="../images/favicon.ico">
 
 	<!-- Bootstrap core CSS -->
 	<link href="../lib/bootstrap/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<!-- Custom styles for this template -->
 
 	<link href="../css/style.css" rel="stylesheet">
-	<link rel="icon" href="../images/favicon.ico">
 
-	<link href="../lib/beyond/beyond.min.css" rel="stylesheet" type="text/css" />
-<!--webfonts-->
-   <!--<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600,700|Six+Caps' rel='stylesheet' type='text/css'>-->
-<!--//webfonts-->
+	<link rel="stylesheet" href="../editor/activity/css/chocolat.css" type="text/css" media="screen" charset="utf-8" />
+
+	<link href="../styles/activity.css" rel="stylesheet">
+	<title>活动展示</title>
 </head>
 <body>
-
-<!-- Navigation -->
-<style>
-	.dropdown-menu{
-		background-color: #222222;
-	}
-
-	.dropdown-menu>li>a{
-		color:#fff;
-	}
-</style>
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container">
 		<div class="navbar-header">
@@ -78,17 +56,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <div class="container galleryContainer">
 	<section style="margin-top: 35px;">
-	<!--light-box-files -->
-		<script src="../editor/activity/js/jquery.chocolat.js"></script>
-		<link rel="stylesheet" href="../editor/activity/css/chocolat.css" type="text/css" media="screen" charset="utf-8" />
-		<!--light-box-files -->
-		<script type="text/javascript" charset="utf-8">
-		$(function() {
-			$('.gallery-bottom a').Chocolat();
-		});
-		</script>
-		<!--上传图文-->
-
 	<!--gallery-starts-->
 	<div class="gallery" id="gallery">
 		<div class="container">
@@ -96,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-xs-12 col-md-12">
 					<div class="widget"  id="postP">
 						<div class="widget-header ">
-							<span class="widget-caption">上传活动</span>
+							<span class="widget-caption">上传照片</span>
 						</div>
 						<div class="widget-body">
 							<div class="row" style="padding-left: 1%">
@@ -123,7 +90,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 
-				<h3>活动相册</h3>
+			<h3>活动相册</h3>
 			<div class="gallery-bottom">
 					<div class="col-md-4">
 						<div class="gallery-left">
@@ -193,6 +160,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--gallery-->
 	</section>
 </div>
+<script type="applijewelleryion/x-javascript">
+addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
+</script>
+
+<script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/bootstrap/bootstrap.min.js"></script>
+<script src="../editor/activity/js/jquery.chocolat.js"></script>
 <script src="../scripts/nav.js"></script>
 <script src="../scripts/activity.js"></script>
 </body>
