--- a/public/views/planList.html
+++ b/public/views/planList.html
@@ -107,42 +107,10 @@ Purchase: http://wrapbootstrap.com
                                 <a  class="btn btn-primary pull-right" id="exportW" >导出为word</a>
                                 <br/>
                             </div>
-                            <table class="table table-striped table-hover table-bordered" id="editabledatatable">
-                                <thead>
-                                <tr role="row">
-                                    <th>
-                                        学年
-                                    </th>
-                                    <th>
-                                        学期
-                                    </th>
-                                    <th>
-                                        开始时间
-                                    </th>
-                                    <th>
-                                        结束时间
-                                    </th>
-                                    <th>
-                                        任务详情
-                                    </th>
-                                    <th>
-                                        任务完成情况
-                                    </th>
-                                    <!--<th>-->
-                                        <!--老师评语-->
-                                    <!--</th>-->
-                                    <th>
-                                        审核情况
-                                    </th>
-                                    <th>
-                                        评级情况
-                                    </th>
-                                </tr>
-                                </thead>
+                            <div  id="taskListContainer">
 
-                                <tbody id="taskListContainer">
-                                </tbody>
-                            </table>
+                            </div>
+
                         </div>
 
                     </div>
@@ -199,31 +167,72 @@ Purchase: http://wrapbootstrap.com
 <script src="../scripts/planList.js"></script>
 <script src="../js/jquery.params.js"></script>
 <script id="taskList" type="text/html">
-    {{each taskLists as task i}}
-    <tr>
-        <td>{{task.year}}</td>
-        <td>{{task.term}}</td>
-        <td>{{task.start}}</td>
-        <td>{{task.deadline}}</td>
-        <td>{{task.content}}</td>
-        <td>{{task.remark}}</td>
-        <td class="scrollNav">
-            {{if task.status == '未审核'}}
-            <a href="javascript:;" class="btn btn-success btn-xs " data-mode='{{task.plan_id}}' onclick="cBTn(this)"><i class="fa fa-check"></i>通过 </a>
-            <a href="javascript:;" class="btn btn-danger btn-xs " data-mode='{{task.plan_id}}' onclick="fBTn(this)"><i class="fa fa-times"></i>驳回 </a>
-            {{else}}
-            {{task.status}}
-            {{/if}}
-        </td>
-        <td>
-            {{if task.rate == ''}}
-            <a href="javascript:;" class="btn btn-success btn-xs " data-mode='{{task.plan_id}}' onclick="rBtn(this)"><i class="fa fa-check"></i>计划评级 </a>
-            {{else}}
-            {{task.rate}}
-            {{/if}}
-        </td>
-    </tr>
-    {{/each}}
+    {{if isZero === 0}}
+    <table class="table table-striped table-hover table-bordered">
+        <thead>
+        <tr role="row">
+            <th>
+                学年
+            </th>
+            <th>
+                学期
+            </th>
+            <th>
+                开始时间
+            </th>
+            <th>
+                结束时间
+            </th>
+            <th>
+                任务详情
+            </th>
+            <th>
+                任务完成情况
+            </th>
+            <!--<th>-->
+            <!--老师评语-->
+            <!--</th>-->
+            <th>
+                审核情况
+            </th>
+            <th>
+                评级情况
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        {{each taskLists as task i}}
+        <tr>
+            <td>{{task.year}}</td>
+            <td>{{task.term}}</td>
+            <td>{{task.start}}</td>
+            <td>{{task.deadline}}</td>
+            <td>{{task.content}}</td>
+            <td>{{task.remark}}</td>
+            <td class="scrollNav">
+                {{if task.status == '未审核'}}
+                <a href="javascript:;" class="btn btn-success btn-xs " data-mode='{{task.plan_id}}' onclick="cBTn(this)"><i class="fa fa-check"></i>通过 </a>
+                <a href="javascript:;" class="btn btn-danger btn-xs " data-mode='{{task.plan_id}}' onclick="fBTn(this)"><i class="fa fa-times"></i>驳回 </a>
+                {{else}}
+                {{task.status}}
+                {{/if}}
+            </td>
+            <td>
+                {{if task.rate == ''}}
+                <a href="javascript:;" class="btn btn-success btn-xs " data-mode='{{task.plan_id}}' onclick="rBtn(this)"><i class="fa fa-check"></i>计划评级 </a>
+                {{else}}
+                {{task.rate}}
+                {{/if}}
+            </td>
+        </tr>
+        {{/each}}
+        </tbody>
+    </table>
+    {{else}}
+    <div style="display:flex;justify-content:center;align-items:center;" >
+        <img src="../images/icon_empty_content.png"/>
+    </div>
+    {{/if}}
 </script>
 
 
