--- a/public/views/taskList.html
+++ b/public/views/taskList.html
@@ -94,43 +94,14 @@ Purchase: http://wrapbootstrap.com
                         <div class="widget-header ">
                             <span class="widget-caption" >学生姓名:<a id="stuName"></a></span>
                         </div>
-                        <div class="widget-body">
+                        <div class="widget-body" >
                             <div class="table-toolbar">
                                 <div class="widget" id="student">
-
+                                </div>
                             </div>
-                            <table class="table table-striped table-hover table-bordered" id="editabledatatable">
-                                <thead>
-                                <tr role="row">
-                                    <th>
-                                        学年
-                                    </th>
-                                    <th>
-                                        学期
-                                    </th>
-                                    <th>
-                                        开始时间
-                                    </th>
-                                    <th>
-                                        结束时间
-                                    </th>
-                                    <th>
-                                        任务详情
-                                    </th>
-                                    <th>
-                                        评价时间
-                                    </th>
-                                    <th>
-                                        老师评语
-                                    </th>
-                                    <th>
-                                        操作
-                                    </th>
-                                </tr>
-                                </thead>
-                                <tbody id="taskListContainer">
-                                </tbody>
-                            </table>
+                            <div id="taskListContainer">
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -176,20 +147,60 @@ Purchase: http://wrapbootstrap.com
 <!--Page Related Scripts-->
 <!--Sparkline Charts Needed Scripts-->
 <script id="taskList" type="text/html">
-    {{each taskLists as task i}}
-    <tr>
-    <td>{{task.year}}</td>
-    <td>{{task.term}}</td>
-    <td>{{task.start}}</td>
-    <td>{{task.deadline}}</td>
-    <td>{{task.content}}</td>
-    <td>{{task.created_at}}</td>
-    <td>{{task.remark}}</td>
-    <td class="scrollNav">
-        <a href="#pingjia" class="btn btn-primary btn-xs editComment" data-mode='{{task.plan_id}}' onclick="rateBTn(this)"><i class="fa fa-edit"></i>编辑 </a>
-        </td>
+    <table class="table table-striped table-hover table-bordered" >
+        {{if isZero === 0}}
+        <thead>
+        <tr role="row">
+            <th>
+                学年
+            </th>
+            <th>
+                学期
+            </th>
+            <th>
+                开始时间
+            </th>
+            <th>
+                结束时间
+            </th>
+            <th>
+                任务详情
+            </th>
+            <th>
+                评价时间
+            </th>
+            <th>
+                老师评语
+            </th>
+            <th>
+                操作
+            </th>
+        </tr>
+        </thead>
+        <tbody >
+        {{each taskLists as task i}}
+        <tr>
+            <td>{{task.year}}</td>
+            <td>{{task.term}}</td>
+            <td>{{task.start}}</td>
+            <td>{{task.deadline}}</td>
+            <td>{{task.content}}</td>
+            <td>{{task.created_at}}</td>
+            <td>{{task.remark}}</td>
+            <td class="scrollNav">
+                <a href="#pingjia" class="btn btn-primary btn-xs editComment" data-mode='{{task.plan_id}}' onclick="rateBTn(this)"><i class="fa fa-edit"></i>编辑 </a>
+            </td>
         </tr>
         {{/each}}
+        </tbody>
+        {{else}}
+        <div style="display:flex;justify-content:center;align-items:center;" >
+            <img src="../images/icon_empty_content.png"/>
+        </div>
+        {{/if}}
+    </table>
+
+
 </script>
 <script src="../lib/sparkline/jquery.sparkline.js"></script>
 <script src="../lib/sparkline/sparkline-init.js"></script>
