--- a/public/styles/myArticle.css
+++ b/public/styles/myArticle.css
@@ -3,3 +3,11 @@
     color:#000;
     float: right;
 }
+
+.dropdown-menu{
+    background-color: #222222;
+}
+
+.dropdown-menu>li>a{
+    color:#fff;
+}
