个人 档案页面 菜单栏

--- a/public/views/userInfo.html
+++ b/public/views/userInfo.html
@@ -23,6 +23,7 @@
     <title>个人档案</title>
 </head>
 <body>
+<!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -50,11 +51,13 @@
                     <ul class="dropdown-menu">
                         <li><a href="myArticles.html">我的文章</a></li>
                         <li><a href="userInfo.html">个人档案</a></li>
+                        <li><a href="modifyPassword.html">修改密码</a></li>
                     </ul>
                 </li>
                 <li id="logout"><a href="login.html">退出</a></li>
                 <li id="login"><a href="login.html">登录</a> </li>
             </ul>
+
         </div>
         <!--/.nav-collapse -->
     </div>
