--- a/public/styles/userInfo.css
+++ b/public/styles/userInfo.css
@@ -1,3 +1,11 @@
+.dropdown-menu{
+    background-color: #222222;
+}
+
+.dropdown-menu>li>a{
+    color:#fff;
+}
+
 .info_name{
     display: inline;
     color:#666;
