删除无用代码

--- a/public/views/planList.html
+++ b/public/views/planList.html
@@ -162,7 +162,7 @@ Purchase: http://wrapbootstrap.com
 <!--Basic Scripts-->
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/bootstrap/bootstrap.min.js"></script>
-
+<script src="../lib/artDialog/jquery.artDialog.js"></script>
 <script src="../lib/art-template/template.js"></script>
 <script src="../scripts/planList.js"></script>
 <script src="../js/jquery.params.js"></script>
