--- a/public/views/userInfo.html
+++ b/public/views/userInfo.html
@@ -215,7 +215,7 @@
         <div class="col-md-5">
             <div class="row avatar_container">
                 <div class="avatar">
-                    <img id="avatarChange" src="https://sfault-avatar.b0.upaiyun.com/389/430/3894305104-59fe90aea4ec6_huge256">
+                    <img id="avatarChange" src="{{f_avatar}}">
                 </div>
                 <div class="upload_avatar">
                         <input type="file" class="file hide"data-mode="" accept="image/gif,image/jpeg,image/jpg,image/png,image/svg" id="avatarFile" name="file">
